# ai-lead-gen-agent

./: .env.example  .gitignore  Dockerfile  README.md  README_HF.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent/workflows/: deploy-to-huggingface.md  keep-supabase-alive.md
.github/workflows/: deploy_hf.yml  keep_hf_space_alive.yml  keep_supabase_alive.yml
api/: main.py  schemas.py
api/endpoints/: __init__.py  ingestion_routes.py  lead_routes.py  outreach_routes.py
app/: config.py
app/ai_engine/: __init__.py  processor.py  prompt_templates.py  utils.py
app/db/: __init__.py  models.py  repository.py  session.py
app/ingestion/: __init__.py  fetcher.py  filters.py  normalizer.py
app/outreach/: __init__.py  mailer.py  templates.py
app/services/: lead_service.py  scoring.py
docs/: api_docs.md  architecture.md  prompt_guidelines.md
scripts/: run_ingestion.py  run_outreach.py  setup_db.py
tests/: conftest.py  test_ai_engine.py  test_db.py  test_ingestion.py  test_outreach.py
