[project]
name = "ai-lead-gen-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.1",
    "beautifulsoup4==4.13.3",
    "fastapi==0.115.8",
    "httpx==0.28.1",
    "langchain==0.3.19",
    "langchain-community==0.3.18",
    "langchain-openai==0.3.6",
    "lxml==5.3.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.38",
    "tenacity==9.0.0",
    "uvicorn[standard]==0.34.0",
]
